// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should match snapshot for value disabled: false, type: number, size: small, align: left, error: true and description: description 1`] = `
<input
  class="sc-fvEvSO dYmHXD"
  min="0"
  placeholder="placeholder"
  type="number"
  value="Test value"
/>
`;

exports[`TextField should match snapshot for value disabled: false, type: text, size: small, align: left, error: false and description: description 1`] = `
<input
  class="sc-fvEvSO gvpuQm"
  min="0"
  placeholder="placeholder"
  type="text"
  value="Test value"
/>
`;

exports[`TextField should match snapshot for value disabled: true, type: number, size: regular, align: right, error: true and description: description 1`] = `
<input
  class="sc-fvEvSO bFASPB"
  disabled=""
  min="0"
  placeholder="placeholder"
  type="number"
  value="Test value"
/>
`;

exports[`TextField should match snapshot for value disabled: true, type: search, size: small, align: center, error: false and description:  1`] = `
<input
  class="sc-fvEvSO jMmoyy"
  disabled=""
  min="0"
  placeholder="placeholder"
  type="search"
  value="Test value"
/>
`;
